For ratings-tdlist, fixed alignment of headings above integers (ratings).

--- a/hugo/static-src/css/style.after-bulma.scss
+++ b/hugo/static-src/css/style.after-bulma.scss
@@ -107,7 +107,8 @@ html {
 
 .ws-ratings-tdlist {
   min-width:600px;
-  thead th { vertical-align:bottom; text-align:center; font-size:0.8rem; }
+  thead tr th { vertical-align:bottom; text-align:center; font-size:0.8rem; }
+  thead tr th.right { text-align:right; }
   tbody tr td { font-size:0.8rem; }
   tbody tr td.int { text-align:right; }
 }
